--- a/www/index.ejs
+++ b/www/index.ejs
@@ -27,7 +27,7 @@
 <div class="play">
     <video width="860px" height="auto" controls="controls" preload="none" webkit-playsinline="true" playsinline
            x-webkit-airplay="true" x5-video-player-type="h5" x5-video-orientation="h5" x5-video-player-fullscreen="true"
-           poster="<%=data.jpg||'def.jpg'%>">
+           poster="<%=data.jpg||''%>">
         <source src="<%=data.mp4%>" type="video/mp4">
     </video>
     <h4><a href="/?id=<%=data.id-1%>">上一集</a> <%=data.title%> <a href="/?id=<%=data.id+1%>">下一集</a></h4>
