--- a/www/index.ejs
+++ b/www/index.ejs
@@ -25,7 +25,7 @@
 <body>
 <% if (data.mp4) { %>
 <div class="play">
-    <video width="860px" height="auto" controls="controls" preload="none" webkit-playsinline="true" playsinline
+    <video width="860px" height="auto" controls="controls" preload="none" webkit-playsinline="true" playsinline autoplay
            x-webkit-airplay="true" x5-video-player-type="h5" x5-video-orientation="h5" x5-video-player-fullscreen="true"
            poster="<%=data.jpg||''%>">
         <source src="<%=data.mp4%>" type="video/mp4">
@@ -33,14 +33,14 @@
     <h4><a href="/?id=<%=data.id-1%>">上一集</a> <%=data.title%> <a href="/?id=<%=data.id+1%>">下一集</a></h4>
 </div>
 <% } else if (data.rows) {
-    let width = 11, pad = Math.ceil(width / 2), start = 1, end = width;
+    let width = 11, pad = Math.ceil(width / 2), start = 1, end = width, max = Math.ceil(data.count / rows);
     if (rows > width) {
         if (page > pad) {
             start += page - pad;
             end += page - pad;
-            if (end > rows) {
-                end = rows;
-                start -= end - rows;
+            if (end > max) {
+                end = max;
+                start -= end - max;
             }
         }
     } else {end = rows;}
@@ -49,10 +49,10 @@
 <ul class="page">
     <em>Page <%=page%> of <%=Math.ceil(data.count / rows)%></em>
     <li><a href="/?page=<%=page > 1 ? page - 1 : 1%>">Previous</a></li>
-    <% for (let i = start; i < end; i++) { %>
+    <% for (let i = start; i <= end; i++) { %>
     <li class="<%= page===i?'active':''%>"><a href="/?page=<%= i %>"><%= i %></a></li>
     <% } %>
-    <li><a href="/?page=<%=page > 0 ? page + 1 : 1%>">Next</a></li>
+    <li><a href="/?page=<%=page > 0 ? (page < end ? page + 1 : end) : 1%>">Next</a></li>
     <em>Count <%=rows%> of <%=data.count%></em>
 </ul>
 <div class="clear"></div>
@@ -70,6 +70,16 @@
         <% } %>
     </ul>
 </div>
+<div class="clear"></div>
+<ul class="page">
+    <em>Page <%=page%> of <%=Math.ceil(data.count / rows)%></em>
+    <li><a href="/?page=<%=page > 1 ? page - 1 : 1%>">Previous</a></li>
+    <% for (let i = start; i <= end; i++) { %>
+        <li class="<%= page===i?'active':''%>"><a href="/?page=<%= i %>"><%= i %></a></li>
+    <% } %>
+    <li><a href="/?page=<%=page > 0 ? (page < end ? page + 1 : end) : 1%>">Next</a></li>
+    <em>Count <%=rows%> of <%=data.count%></em>
+</ul>
 <% } %>
 </body>
 </html>
